--- a/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
@@ -45,7 +45,7 @@
 
         <div class='a-modal-close verde'>
             <div class="a-titulo-modal verde">{{vm.language.strings.Confirmacion}}</div>
-            <button title="Cerrar dialogo" ng-click="vm.ban_confirmacion=false">
+            <button title="{{vm.language.strings.CerrarDialogo}}" ng-click="vm.ban_confirmacion=false">
                 <span class="ico-times"></span>
             </button>
         </div>
