--- a/WebLegemClient/src/app/anotacion/editar-anotacion/templates/form_editar_anotacion.html
+++ b/WebLegemClient/src/app/anotacion/editar-anotacion/templates/form_editar_anotacion.html
@@ -4,7 +4,7 @@
     <div class="generic-box-horizontal resumen_asociar_doc">
         <div class="generic-box-vertical">
             <div class="ico-lde"><span class="ico-file-text-o"></span></div>
-            <a>acuerdo 25 del 20 de julio del 2008</a>
+            <p>acuerdo 25 del 20 de julio del 2008</p>
             <p>Entidad:</p>
             <i>Faculta d ingeniera de sistemas</i>
             <p>Fecha de publicacion:</p>
@@ -13,7 +13,7 @@
         <div class="flecha_rad"><div class="ico-lde"><span class="ico-long-arrow-right"></span></div></div>
         <div class="generic-box-vertical">
             <div class="ico-lde"><span class="ico-file-text-o"></span></div>
-            <a>acuerdo 25 del 20 de julio del 2008</a>
+            <p>acuerdo 25 del 20 de julio del 2008</p>
             <p>Entidad:</p>
             <i>Faculta d ingeniera de sistemas</i>
             <p>Fecha de publicacion:</p>
