--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -9,7 +9,7 @@
 
             <div class="box-uploader">
                 <form class="contenedor_uploader_gd" name="vm.form_subir_doc">
-                    <label class="uploader" id="fileOutput" nv-file-drop uploader="vm.uploader">
+                    <label class="uploader" id="fileOutput"  for="files" nv-file-drop uploader="vm.uploader">
                         <span id="ico_no_cargado" class="icon ico-upload"></span>
                         <span id="ico_cargado" class="icon ico-check"></span>
 
