--- a/WebLegemClient/src/common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div class="ca_label_busqueda" ng-if="!vm.banCrearAnotacion">Se encontro N {{n}} resultados de la busqueda:</div>
+﻿<div class="ca_label_busqueda" ng-if="!vm.banCrearAnotacion">{{vm.language.strings.SeEncontroN}}{{n}} {{vm.language.strings.ResultadosBusqueda}}:</div>
 <div class="ca_label_busqueda" ng-if="vm.banCrearAnotacion">{{vm.language.strings.CompleteDatosCrearAnotacion}}:</div>
 
 
