--- a/WebLegemClient/src/common/components/wl-modal/wl-modal.directive.html
+++ b/WebLegemClient/src/common/components/wl-modal/wl-modal.directive.html
@@ -2,7 +2,7 @@
     <div class='ng-modal-overlay' ng-click='hideModal()'></div><!--Simula la opacidad de fondo del dialogo-->
     <div class='ng-modal-dialog'>
         <div class='ng-modal-close'>
-            <button class="btn_ico" title="Cerrar dialogo" ng-click="hideModal()">
+            <button class="btn_ico" title="{{vm.language.strings.CerrarDialogo}}" ng-click="hideModal()">
                 <span class="ico-times"></span>
             </button>
         </div>
