--- a/WebLegemClient/src/common/components/wl-titulo-nav/wl-titulo-nav.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-titulo-nav/wl-titulo-nav.tmpl.html
@@ -1,5 +1,5 @@
 ﻿<div>
-    <a class="texto_labels" ui-sref="home"> Inicio </a>
+    <a class="texto_labels" ui-sref="home">{{vm.language.strings.Inicio}}  </a>
     <span class="ico-caret-right"></span>
     <p class="texto_labels no_event"> {{v.padre.title}} </p>
     <span class="ico-caret-right"></span>
