--- a/WebLegemClient/src/app/auditoria/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/auditoria/control-usuarios/control-usuarios.tmpl.html
@@ -21,7 +21,7 @@
         </wl-admin-crud>
         <modal-dialog show="vm.camaraToggle">
             <div class='ng-modal-close'>
-                <button class="btn_ico" title="Cerrar dialogo" ng-click="vm.cerrarCamara()" 
+                <button class="btn_ico" title="{{vm.language.strings.CerrarCamara}}" ng-click="vm.cerrarCamara()" 
                         ng-disabled="!vm.editando">
                     <span class="ico-times"></span>
                 </button>
@@ -54,23 +54,23 @@
                 <div class="box_fotografia">
                     <div class="foto_usuarios">
                         <span class="ico-user" ng-show="!vm.trash"></span>
-                        <img src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
+                        <img alt=" {{vm.language.strings.FotografiaUsuario}}" src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
                         <input type="file" id="input_usu_foto"
                                 ng-disabled="!vm.editando" />
                         <input type="hidden" id="hidden_input" name="filename" />
                     </div>
                     <div class="botonera_camara">
-                        <button class="btn_ico" title="Tomar foto" ng-click="vm.abrirCamara();"
+                        <button class="btn_ico" title="{{vm.language.strings.TomarFoto}}" ng-click="vm.abrirCamara();"
                                 ng-disabled="!vm.editando">
                             <span class="ico-camera"></span>
                         </button>
 
-                        <button class="btn_ico" title="Subir foto" ng-click="vm.seleccionarArchivo();"
+                        <button class="btn_ico" title="{{vm.language.strings.SubirFoto}}" ng-click="vm.seleccionarArchivo();"
                                 ng-disabled="!vm.editando">
                             <span class="ico-upload"></span>
                         </button>
 
-                        <button class="btn_ico" title="Borrar Foto" ng-show="vm.trash" ng-click="vm.borrarFoto();"
+                        <button class="btn_ico" title="{{vm.language.strings.BorrarFoto}}" ng-show="vm.trash" ng-click="vm.borrarFoto();"
                                 ng-disabled="!vm.editando">
                             <span class="ico-trash"></span>
                         </button>
@@ -99,7 +99,7 @@
         <div class="box_duo_input">
             <div>
                 <p class="texto_labels green">{{vm.language.strings.Contrasena}}</p>
-                <input class="a_input" type="text" ng-model="vm.usuarioSeleccionado.contrasena" maxlength="20"
+                <input class="a_input"  type="text" ng-model="vm.usuarioSeleccionado.contrasena" maxlength="20"
                         ng-disabled="!vm.editando"/>
                 <div id="widget_seguridad">
                     <div id="content_span">
@@ -134,7 +134,7 @@
                                 ng-model="vm.usuarioSeleccionado.rol">
                         </select>                        
                     </div>
-                    <button class="btn_ico" title="Informacion rol" ng-click="vm.mostrarDialogo(vm.usuarioSeleccionado.rol)"
+                    <button class="btn_ico" title="{{vm.language.strings.InformacionRol}}" ng-click="vm.mostrarDialogo(vm.usuarioSeleccionado.rol)"
                             ng-disabled="!vm.editando">
                         <span class="ico-info"></span>
                     </button>
@@ -149,16 +149,14 @@
                 <p class="texto_labels green">{{vm.language.strings.EstadoUsuario}}</p>
                 <div class="contenedor_radios">
                     <span>
-                        <input class="a_radio" id="rad1" type="radio" name="rad" checked 
+                        <input class="a_radio" id="rad1" type="radio" name="rad1" checked 
                                 ng-disabled="!vm.editando"
                                 ng-model="vm.usuarioSeleccionado.estado"
                                 ng-value="'A'" />
-                        <label for="rad1">
-                            {{vm.language.strings.Activo}}
-                        </label>
+                        <label for="rad1"> {{vm.language.strings.Activo}}  </label>
                     </span>
                     <span>
-                        <input class="a_radio" id="rad2" type="radio" name="rad"
+                        <input class="a_radio" id="rad2" type="radio" name="rad2"
                                 ng-disabled="!vm.editando"
                                 ng-model="vm.usuarioSeleccionado.estado"
                                 ng-value="'I'" />
