--- a/WebLegemClient/src/app/principal/principal.tmpl.html
+++ b/WebLegemClient/src/app/principal/principal.tmpl.html
@@ -17,15 +17,15 @@
 
         <div>
             <div>
-                <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png"  title="Logo acreditación universidad de Nariño"/>
+                <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png"  title="{{vm.language.strings.LogoAcreditacion}} "/>
             </div>
 
             <div>
-                <img src="recursos/escudos-logos/planeacion.png" title="Logo planeacion universidad de nariño" />
+                <img src="recursos/escudos-logos/planeacion.png" title="{{vm.language.strings.LogoPlaneacion}}" />
             </div>
 
             <div>
-                <img src="recursos/escudos-logos/escudo_111_years.png" title="Escudo 111 años " />
+                <img src="recursos/escudos-logos/escudo_111_years.png" title="{{vm.language.strings.EscudoAnos}} " />
             </div>
         </div>
     </div>
