--- a/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
@@ -53,15 +53,15 @@
     </div>
 </div>
 
-<wl-info show="vm.dialogResponse" title="Error" color="verde">
+<wl-info show="vm.dialogResponse" title="{{vm.language.strings.Error}}" color="verde">
     <div class='a-modal-contenido'>
         <div class="generic-box-vertical">
             <div class="generic-box-horizontal center">
-                <label class="texto_labels">{{vm.responseMessage}}</label>
+                <p class="texto_labels">{{vm.responseMessage}}</p>
             </div>
             <div class="generic-box-horizontal flex-1 center" style="margin-top:15px;">
                 <button class="btn_sin_ico" ng-click="vm.dialogResponse=false">
-                    Aceptar
+                   {{vm.language.strings. Aceptar}}
                 </button>
             </div>
         </div>
