--- a/WebLegemClient/src/common/components/wl-info/wl-info.directive.html
+++ b/WebLegemClient/src/common/components/wl-info/wl-info.directive.html
@@ -3,7 +3,7 @@
     <div class='a-modal-dialog ani-modal-info' ng-show="show" tabindex="1" ewl wl-blur="hideModal()">
         <div class='a-modal-close {{color}}'>
             <div class="a-titulo-modal {{color}}">{{title}}</div>
-            <button title="Cerrar dialogo" ng-click="hideModal()">
+            <button title="{{vm.language.strings.CerrarDialogo}}" ng-click="hideModal()">
                 <span class="ico-times"></span>
             </button>
         </div>
