--- a/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
@@ -29,7 +29,7 @@
 
         <div class="error_lista" ng-show="vm.error">
             <span class="ico2-sad"></span>
-            <p class="texto_labels">Error al cargar los datos</p>
+            <p class="texto_labels">{{vm.language.strings.ErrorCargarDatos}}</p>
         </div>
 
     </ul>
