--- a/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
+++ b/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div class="controles_box_right">
+﻿<div calss="controles_box_right">
 
     <button class="btn_con_ico" ng-class="vm.procesando || vm.error? 'disable': ''"
             ng-show="vm.objetoSeleccionado && vm.objetoSeleccionado.id && !vm.editando"
@@ -24,18 +24,18 @@
         <div class='a-modal-dialog'>
 
             <div class='a-modal-close verde'>
-                <div class="a-titulo-modal verde">Confirmación</div>
-                <button title="Cerrar dialogo" ng-click="vm.ban_confirmacion=false">
+                <div class="a-titulo-modal verde">{{vm.language.strings.Confirmacion}}</div>
+                <button title="{{vm.language.strings.CerrarDialogo}}" ng-click="vm.ban_confirmacion=false">
                     <span class="ico-times"></span>
                 </button>
             </div>
 
             <div class='a-modal-contenido'>
                 <div class="generic-box-vertical">
-                    <p>¿Esta seguro que desea eliminar "{{ vm.objetoSeleccionado.nombre }} ? "</p>
+                    <p>¿{{vm.language.strings.EstaSeguroDeseaEliminar}} "{{ vm.objetoSeleccionado.nombre }} ? "</p>
                     <div class="a-modal-confirmacion">
-                            <button class="btn_sin_ico" value="confirmar" ng-click="vm.confirmarEliminacion()">Eliminar</button>
-                            <button class="btn_sin_ico" ng-click="vm.cancelarEliminacion()">Cancelar</button>
+                            <button class="btn_sin_ico" value="confirmar" ng-click="vm.confirmarEliminacion()">{{vm.language.strings.Eliminar}}</button>
+                            <button class="btn_sin_ico" ng-click="vm.cancelarEliminacion()">{{vm.language.strings.Cancelar}}</button>
 
                     </div>
                 </div>
