--- a/WebLegemClient/src/common/directives/asociar-documento/template/lista_documentos.html
+++ b/WebLegemClient/src/common/directives/asociar-documento/template/lista_documentos.html
@@ -10,8 +10,8 @@
     <div class="box_right">
         <!--mensaje de error si no se encuentra coinsididencias-->
         <label class="msj-error" ng-if="!vm.ban_buscar">
-            No se encontro ningun documento con esa identificacion, desea crear un
-            <a ng-click="vm.nuevoDocumento();" href="" title="Crear documento">nuevo documento</a>
+            {{vm.language.strings.NoEcontroNingunDocumentoIdentificacionDeseaCrear}}
+            <a ng-click="vm.nuevoDocumento();" href="" title="{{vm.language.strings.CrearDocumento}}">{{vm.language.strings.NuevoDocumento}}</a>
         </label>
 
         <div class="dibujo_busqueda" ng-if="vm.documentos.length < 1" >
@@ -21,7 +21,7 @@
 
         <div class="generic-box-horizontal flex-1 derecha" ng-if="vm.ban_buscar" style="margin-bottom: 10px;">
             <button class="btn_sin_ico" ng-click="vm.nuevoDocumento();">
-                Nuevo
+                {{vm.language.strings.Nuevo}}
             </button>
         </div>
 
