parche bug adriana

--- a/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
+++ b/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div calss="controles_box_right">
+﻿<div class="controles_box_right">
 
     <button class="btn_con_ico" ng-class="vm.procesando || vm.error? 'disable': ''"
             ng-show="vm.objetoSeleccionado && vm.objetoSeleccionado.id && !vm.editando"
